# sysrepo-plugin-hardware

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  README.md  dt-build-steps  get-version  meson.build  meson_options.txt
src/: callback.h  component_data.h  hardware_sensors.h  ietf-hardware-plugin.cc  meson.build  operational_callback.h  sensor_data.h
src/utils/: globals.h
yang/: ietf-hardware.yang  sensor-notifications-augment.yang
yang/share/: dt-ietf-hardware-plugin-test-config.xml  hardware.html
